# api/openapi/swagger-spec.json
@@ -1981,6 +1981,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
         "tags": [
           "spatial-feature"
         ]
